# qa_guru_10.18

./: README.md  pyproject.toml
