[tool.poetry]
name = "qa-guru-10-18"
version = "0.1.0"
description = ""
authors = ["Rustam <kodzokoff2016@yandex.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_10"}]

[tool.poetry.dependencies]
python = "^3.9"
selene = "2.0.0rc9"
pytest = "8.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
